--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
-    "sort-by": "^1.2.0"
+    "react-simple-star-rating": "^5.1.7",
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
