--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
     "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^10.0.6",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
